Fixed grid collapse, avoid using mixins on dynamic content

--- a/styles/components/_chevron.scss
+++ b/styles/components/_chevron.scss
@@ -1,12 +1,9 @@
 .chevron {
+  @include button--circle;
   cursor: pointer;
-  font: inherit;
-  background-color: $color-font--white;
-  color: $color-font--black;
   height: 4rem;
   width: 4rem;
   border-radius: 50%;
-  border: 1.5px solid $color-primary;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +11,7 @@
   &__right-logo {
     height: 3rem;
     width: 3rem;
-    color: $color-font--black;
+    color: currentColor;
   }
 
   &__left-logo {
